# Image_Processor

./: CMakeLists.txt  README.md  run.sh
src/: CMakeLists.txt  census.cpp  image_processor.cpp  image_processor.h  s_census.h
src/census/: census.cpp  census.h
src/s_census/: s_census.cpp  s_census.h
test/: test_image_processor.cpp
